corrections in swagger delete
